# tinysha

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml  fuzz-nightly.yml
bench/: CMakeLists.txt  bench_all.cpp
fuzz/: CMakeLists.txt  fuzz_hmac.cpp  fuzz_hmac_sha384.cpp  fuzz_hmac_sha3_256.cpp  fuzz_hmac_sha3_384.cpp  fuzz_hmac_sha3_512.cpp  fuzz_hmac_sha512.cpp  fuzz_pbkdf2.cpp  fuzz_pbkdf2_sha384.cpp  fuzz_pbkdf2_sha3_256.cpp  fuzz_pbkdf2_sha3_384.cpp  fuzz_pbkdf2_sha3_512.cpp  fuzz_pbkdf2_sha512.cpp  fuzz_sha256.cpp  fuzz_sha384.cpp  fuzz_sha3_256.cpp  fuzz_sha3_384.cpp  fuzz_sha3_512.cpp  fuzz_sha512.cpp  fuzz_truncation.cpp  portable_hash.h
include/: tinysha.h
include/tinysha/: common.h  hmac.h  pbkdf2.h  sha256.h  sha384.h  sha3_256.h  sha3_384.h  sha3_512.h  sha512.h  version.h
src/: cpuid.cpp  cpuid.h  hmac.cpp  pbkdf2.cpp  secure_zero.cpp  sha256.cpp  sha384.cpp  sha3_256.cpp  sha3_384.cpp  sha3_512.cpp  sha512.cpp
src/backend/: keccak_arm_ce.cpp  keccak_avx2.cpp  keccak_avx512.cpp  keccak_portable.cpp  keccak_x64.cpp  sha2_arm_ce.cpp  sha2_avx2.cpp  sha2_avx512.cpp  sha2_bmi2_adx.cpp  sha2_portable.cpp  sha2_x64.cpp
src/internal/: endian.h  keccak_sponge.h
tests/: CMakeLists.txt  test_block_boundary.cpp  test_c_api_negative.cpp  test_cpuid.cpp  test_harness.h  test_hmac.cpp  test_main.cpp  test_pbkdf2.cpp  test_sha256.cpp  test_sha384.cpp  test_sha3_256.cpp  test_sha3_384.cpp  test_sha3_512.cpp  test_sha512.cpp  test_truncation.cpp
tests/vectors/: hmac_vectors.inl  pbkdf2_vectors.inl  sha256_vectors.inl  sha384_vectors.inl  sha3_256_vectors.inl  sha3_384_vectors.inl  sha3_512_vectors.inl  sha512_vectors.inl
